# geopull

./: .bumpversion.cfg  .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/geopull/: __main__.py  blocker.py  directories.py  extractor.py  geofile.py  iso2geofabrik.json  normalizer.py  orchestrator.py  tqdm_download.py
tests/: test_blocker.py  test_directories.py  test_extractor.py  test_geofile.py  test_geopull.py  test_normalizer.py  test_orchestrator.py
