[project]
name = "geopull"
description = """
    Simple tool for bulk downloading OSM and GADM geographic files and doing
    a minimal amount of preprocessing.
    """
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.0"
authors = [
    {name = "Manuel Martinez", email = "manmart@uchicago.edu"}
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies = {dev = {file = "dev-requirements.txt"}}

[tools.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geopull = ["*.json"]

[project.urls]
repository = "https://github.com/mansueto-institute/geopull"

[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project.scripts]
geopull = "geopull.__main__:main"

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true
packages = ["src"]
# exclude = ["src/geopull/cdk"]

[tool.pytest.ini_options]
# filterwarnings = "ignore::DeprecationWarning:botocore.*"
addopts = [
    "--cov-config=.coveragerc",
    "--cov=geopull",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--junitxml=coverage-junit.xml",
    "--durations=5"
]