[project]
name = "geopull"
description = """
    Simple tool for bulk downloading OSM and GADM geographic files and doing
    a minimal amount of preprocessing.
    """
readme = "README.md"
requires-python = ">=3.11"
version = "0.6.0"
authors = [
    {name = "Manuel Martinez", email = "manmart@uchicago.edu"}
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies = {dev = {file = "dev-requirements.txt"}}

[tools.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geopull = ["*.json"]

[project.urls]
repository = "https://github.com/mansueto-institute/geopull"

[build-system]
requires = ['setuptools', "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
geopull = "geopull.__main__:main"

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true

[tool.coverage.run]
omit = ["src/geopull/tqdm_download.py"]

[tool.coverage.report]
omit = ["src/geopull/tqdm_download.py"]

[tool.pytest.ini_options]
addopts = [
    "--cov-config=.coveragerc",
    "--cov=geopull",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--junitxml=coverage-junit.xml",
    "--durations=5"
]